testdata/golden/sema/invalid/enum_string_no_value.fmt
// Error: string enum without explicit value

enum Token: string = {
    lbrace = "{",
    rbrace
}
